Mesh deform modifier for curve fails in render #42608

Closed
opened 2014-11-15 17:01:25 +01:00 by Frederik Steinmetz · 7 comments

System Information
Operating system and graphics card
Wind7 64bit, GeForce GTX

Blender Version
Broken: example: 2.70, 2.72a.73f5a47

Short description of error
Using an armature to deform a mesh and using the mesh to deform a curve with the mesh deform modifier gets displayed correctly in the viewport. But as soon as you switch to rendered viewport or render the image the mesh deform modifier gets ignored.

Exact steps for others to reproduce the error

  • Extrude the default cube so it forms an L shape
  • Create an armature that follows the shape
  • Parent the cube to the armature with automatic weights
  • Create a bezièr curve
  • Manipulate so it is inside the L
  • Set extrude of the curve > 0, so it gets rendered.
  • Use the cube as the target object for a mesh deform modifier on the curve
  • Bind
  • deform the armature (gets shown correctly in the VP)
  • Render (Mesh deform is ignored)MeshDeformBug.blend
**System Information** Operating system and graphics card Wind7 64bit, GeForce GTX **Blender Version** Broken: example: 2.70, 2.72a.73f5a47 **Short description of error** Using an armature to deform a mesh and using the mesh to deform a curve with the mesh deform modifier gets displayed correctly in the viewport. But as soon as you switch to rendered viewport or render the image the mesh deform modifier gets ignored. **Exact steps for others to reproduce the error** - Extrude the default cube so it forms an L shape - Create an armature that follows the shape - Parent the cube to the armature with automatic weights - Create a bezièr curve - Manipulate so it is inside the L - Set extrude of the curve > 0, so it gets rendered. - Use the cube as the target object for a mesh deform modifier on the curve - Bind - deform the armature (gets shown correctly in the VP) - Render (Mesh deform is ignored)[MeshDeformBug.blend](https://archive.blender.org/developer/F123946/MeshDeformBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FrederikSteinmetz

Added subscriber: @FrederikSteinmetz

Added subscriber: @mont29

Added subscriber: @mont29

Confirmed. Also:

  • Does not affect meshes (i.e. if I bind a mesh in place of curve in given file, it works as expected).
  • Does not affect 'basic bindings' (i.e. a curve bound to a mesh, even if the mesh is further deformed through e.g. SimpleDeform modifier, works as expected).

So, seems to be a conjunction between bound curve and armature-deformed binder... :/ Did not dig further.

Confirmed. Also: * Does not affect meshes (i.e. if I bind a mesh in place of curve in given file, it works as expected). * Does not affect 'basic bindings' (i.e. a curve bound to a mesh, even if the mesh is further deformed through e.g. SimpleDeform modifier, works as expected). So, seems to be a conjunction between bound curve and armature-deformed binder... :/ Did not dig further.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7d2590bbfa.

Closed by commit 7d2590bbfa.

This issue was referenced by 7d2590bbfa

This issue was referenced by 7d2590bbfab7d7fa378c4c85ff79dccc57b1db98
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42608
No description provided.